@@ -4,6 +4,7 @@ package net.mpvm.saeimmobilier.modele;
 import net.mpvm.saeimmobilier.sql.Query.QueryElement;
 import net.mpvm.saeimmobilier.sql.Query.Queryable;
 import net.mpvm.saeimmobilier.sql.Query.SelectQueryElement;
+import net.mpvm.saeimmobilier.util.JfxUtil;
 import net.mpvm.saeimmobilier.util.Unfinished;
 import net.mpvm.saeimmobilier.sql.Query.UpdateQueryElement;
 
@@ -68,10 +69,10 @@ public abstract class Charges {
         final String SELECT_QUERY = """
         SELECT
             SUM(C.Montant) AS Total
-            FROM Charges C
-            JOIN Bail B ON C.IdBail = B.IdBail
-            WHERE B.Archive = FALSE
-            """;
+        FROM Charges C
+        JOIN Bail B ON C.IdBail = B.IdBail
+        WHERE B.Archive IS NULL
+        """;
 
         double totalCharges = 0.0;
 
@@ -79,21 +80,32 @@ public abstract class Charges {
             selectQueryElement.execute();
             List<Map<String, Object>> result = selectQueryElement.getResult();
 
-            if (!result.isEmpty() && result.get(0).get("TotalCharges") != null) {
-                totalCharges = (double) result.get(0).get("TotalCharges");
+            if (!result.isEmpty()) {
+                Object totalValue = result.getFirst().get("Total");
+                if (totalValue != null) {
+                    if (totalValue instanceof Number) {
+                        totalCharges = ((Number) totalValue).doubleValue();
+                    } else {
+                        throw new Exception("Le type de la valeur total est inattendu : " + totalValue.getClass().getName());
+                    }
+                }
             }
         } catch (QueryElement.QEltException qEltException) {
-            qEltException.getSqlException().printStackTrace();
             throw new Exception("Erreur lors du calcul des charges pour le propriétaire.", qEltException.getSqlException());
+        } catch (Exception e) {
+            throw new Exception("Erreur inattendue lors du calcul des charges pour le propriétaire : " + e.getMessage(), e);
         }
 
         return totalCharges;
     }
+
     public static List<Charges> getChargesDetails() throws ChargesException {
         List<Charges> chargesDetails = new ArrayList<>();
         final String SELECT_QUERY = """
-        SELECT IdCharges,DateCharge, Montant, TypeCharges
-        FROM Charges
+        SELECT C.IdCharges, C.DateCharge, C.Montant, C.TypeCharge
+        FROM Charges C
+        JOIN Bail B ON C.IdBail = B.IdBail
+        WHERE B.Archive is null;
     """;
 
         try (SelectQueryElement query = new SelectQueryElement(SELECT_QUERY)) {
@@ -102,45 +114,55 @@ public abstract class Charges {
 
             // Parcourir chaque ligne de résultat et ajouter à la liste
             for (Map<String, Object> row : result) {
-                switch((String) row.get("TypeCharges")){
-                    case "Eau":
-                        Charges ce=new ChargeEau((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
-                        ce.setMontant((float) row.get("Montant"));
-                        chargesDetails.add(ce);
-                        break;
-                    case "Provision sur charge":
-                        Charges pc=new ProvisionCharge((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
-                        pc.setMontant((float) row.get("Montant"));
-                        chargesDetails.add(pc);
-                        break;
-                    case "Ordures Ménagères":
-                        Charges om=new ChargeOrduresMenageres((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
-                        om.setMontant((float) row.get("Montant"));
-                        chargesDetails.add(om);
-                        break;
-                    case "Électricité":
-                        Charges cel=new ChargeElectricite((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
-                        cel.setMontant((float) row.get("Montant"));
-                        chargesDetails.add(cel);
-                        break;
-                    case "Entretien":
-                        Charges cen=new ChargeEntretien((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
-                        cen.setMontant((float) row.get("Montant"));
-                        chargesDetails.add(cen);
-                        break;
+                String typeCharges = (String) row.get("TypeCharge");
+                int idCharges = (int) row.get("IdCharges");
+                Date dateCharge = (Date) row.get("DateCharge");
+                float montant = JfxUtil.doubleToFloat(row.get("Montant"));
+
+                Charges charge;
+                switch (typeCharges) {
+                    case "Eau" -> {
+                        ChargeEau chargeEau = new ChargeEau(idCharges, dateCharge);
+                        chargeEau.setMontant(montant);
+                        charge = chargeEau;
+                    }
+                    case "Provision sur charge" -> {
+                        ProvisionCharge provisionCharge = new ProvisionCharge(idCharges, dateCharge);
+                        provisionCharge.setMontant(montant);
+                        charge = provisionCharge;
+                    }
+                    case "Ordures Ménagères" -> {
+                        ChargeOrduresMenageres chargeOrdures = new ChargeOrduresMenageres(idCharges, dateCharge);
+                        chargeOrdures.setMontant(montant);
+                        charge = chargeOrdures;
+                    }
+                    case "Électricité" -> {
+                        ChargeElectricite chargeElectricite = new ChargeElectricite(idCharges, dateCharge);
+                        chargeElectricite.setMontant(montant);
+                        charge = chargeElectricite;
+                    }
+                    case "Entretien" -> {
+                        ChargeEntretien chargeEntretien = new ChargeEntretien(idCharges, dateCharge);
+                        chargeEntretien.setMontant(montant);
+                        charge = chargeEntretien;
+                    }
+                    default -> throw new ChargesException(
+                            "Type de charge inconnu : " + typeCharges,
+                            null
+                    );
                 }
-
-
+                chargesDetails.add(charge);
             }
         } catch (QueryElement.QEltException qEltException) {
             throw new ChargesException(
-                    "Erreur lors de la récupération des détails des charges.",
+                    "Erreur lors de la récupération des détails des charges : " + qEltException.getMessage(),
                     qEltException.getSqlException()
             );
         }
 
         return chargesDetails;
     }
+
 
     @Unfinished
     public static List<Charges> getChargesFromLocataire(Locataire locataire) throws ChargesException {
